Implement Java-to-C++ runtime pipeline and integration checks